--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
